--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "il-ilce-gorsel",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "start": "next start"
-  },
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start"
+},
   "dependencies": {
     "next": "14.1.0",
     "react": "^18",
