--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "start": "next start"
 },
   "dependencies": {
-  "next": "14.0.4",
+  "next": "^14.0.4",
   "react": "^18",
   "react-dom": "^18",
   "sharp": "^0.33.0"
