--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "il-ilce-gorsel",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start"
-},
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-  "next": "^14.0.4",
-  "react": "^18",
-  "react-dom": "^18",
-  "sharp": "^0.33.0"
+    "next": "^14.0.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "sharp": "^0.33.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0",
+    "@types/react": "^18.0.0",
+    "@types/node": "^20.0.0"
+  }
 }
-}
-
