--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "FONTCONFIG_PATH=./ next build"
+    "build": "FONTCONFIG_PATH=./ next build",
     "start": "next start"
   },
   "dependencies": {
